src/test/deca/syntax/invalid/class/declaration/unclosed_brace_13.deca
// Description:
//    Tests a syntactically incorrect program for a class with an unclosed brace
//
// Results:
//    Line 13 : Error, unmatched brace, expected a '}'.
//
// History:
//    created on 07/01/2025

class TestClass {
    int a = 10;
    float b = 10.0;
